# minicache

./: .eslintrc.yml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md  build.rs  index.d.ts  index.js  package.json  run_benchmarks.sh  test_simple.js  tsconfig.json
benches/: minicache_benchmark.rs
docs/: BENCHMARKS.md  NAPI_README.md  PERFORMANCE_GUIDE.md  README_BENCHMARKS.md
examples/: memory_profiler.rs  quick_demo.rs
examples/nodejs/: README.md  advanced.js  basic.js  typescript-example.ts
src/: core.rs  lib.rs  napi.rs  napi_simple.rs
