[package]
name = "minicache"
version = "0.1.1"
edition = "2024"
authors = ["Your Name morshedulmunna1@gmail.com"]
description = "A fast, lightweight, async-compatible in-memory cache with TTL support and automatic cleanup"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/execute-soft/minicache"
repository = "https://github.com/execute-soft/minicache"
documentation = "https://docs.rs/minicache"
keywords = ["cache", "ttl", "async", "tokio", "memory"]
categories = ["caching", "data-structures", "concurrency", "asynchronous"]
exclude = [
    "target/*",
    "benchmark_results/*",
    "*.sh",
    "docs/BENCHMARKS.md",
    "docs/PERFORMANCE_GUIDE.md",
    "docs/README_BENCHMARKS.md"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = {version = "1.48.0", features = ["full"]}

# N-API dependencies (optional feature)
napi = { version = "3", optional = true, default-features = false, features = ["napi4", "tokio_rt", "compat-mode"] }
napi-derive = { version = "3", optional = true }

[features]
default = []
napi = ["dep:napi", "dep:napi-derive"]

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
sysinfo = "0.37.2"

[[bench]]
name = "minicache_benchmark"
harness = false
